fix: Corriger le CSS bleu (#4bbaff) qui contaminait tout le site en dark mode
Les sélecteurs body.dark dans les styles scopés de l'encyclopédie produisaient
un CSS compilé cassé (body.dark { color: #4bbaff }) qui s'appliquait globalement.
Remplacé par une variable CSS --link-color définie dans global.scss.

--- a/src/global.scss
+++ b/src/global.scss
@@ -214,6 +214,7 @@ body {
 	--text-color: #111;
 	--text-color-secondary: #777;
 	--type-color: #0000D0;
+	--link-color: #0645ad;
 	&.dark {
 		--pure-white: #000;
 		--pure-black: #fff;
@@ -225,6 +226,7 @@ body {
 		--text-color: #f7f7f7;
 		--text-color-secondary: #999;
 		--type-color: #0099d0;
+		--link-color: #4bbaff;
 	}
 }
 ::selection {
